--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
                 <p class="lead mb-2"> Enter text to search</p>
             </div>
             <div class="row px-4 py-4">
-                <p class="small-lead mb-2">Explanation</p>
+                <p class="small-lead mb-2">Search for a word in Finnegans Wake! </b> Allow time for matches to load.</p>
             </div>
             <form method="post" action = "/">
                 <div class="row text-center justify-content-center">
