--- a/templates/index.html
+++ b/templates/index.html
@@ -15,8 +15,8 @@
             </div>
             <div class="row px-4 py-4">
                 <p class="small-lead mb-2">Search for a word in Finnegans Wake!
-                    <b> Words that are similar and might have some reference (intentional or not on Joyce's part) will appear. </b>
-                    <b>Allow time for matches to load.</p>
+                    <br> Words that are similar and might have some reference (intentional or not on Joyce's part) will appear. </br>
+                    <br>Allow time for matches to load.</p>
             </div>
             <form method="post" action = "/">
                 <div class="row text-center justify-content-center">
